Improve proxy exception parsing on Mac OS X and Windows. b=470207 sr=roc